fix: code block overflow

--- a/src/app/posts/[...slug]/_components/github-dark.css
+++ b/src/app/posts/[...slug]/_components/github-dark.css
@@ -12,6 +12,7 @@
 pre:has(.hljs), .hljs {
   color: #c9d1d9;
   background: #0d1117;
+  overflow: auto;
 }
 
 pre:has(.hljs) {
